# psst

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md
docs/: logic.md
docs/superpowers/plans/: 2026-04-03-psst-implementation.md  2026-04-09-cursor-api-provider.md
docs/superpowers/specs/: 2026-04-03-psst-usage-notifier-design.md  2026-04-09-cursor-api-provider-design.md
src/: config.rs  lib.rs  main.rs  scheduler.rs  state.rs  threshold.rs
src/data_sources/: claude_quota.rs  cursor_api.rs  cursor_local.rs  discovery.rs  estimated_quota.rs  mod.rs  usage_collector.rs
src/notifiers/: desktop.rs  mod.rs  serverchan.rs  telegram.rs  web_push_notifier.rs
src/web/: api.rs  mod.rs
src/web/static/: app.js  index.html  manifest.json  sw.js
tests/: config_test.rs  cursor_api_test.rs  discovery_test.rs  notifier_test.rs  state_test.rs  threshold_test.rs
